Made some changes so that you can no longer over scroll borders on mobile browsers

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -70,8 +70,12 @@
   }
 
   .background_image_menu{
-
     background-size: 300% 150%;
+  }
+
+  .entire_app{
+    max-width: 100vw;
+    overflow-x: hidden;
 
   }
 }
