--- a/src/styles.css
+++ b/src/styles.css
@@ -60,4 +60,17 @@ button p{
   }
 
 
+  @media (max-width: 700px){
+    html,body{
+      max-width: 100%;
+      overflow-x: hidden;
+
+    }
+
+    .root{
+      max-width: 100vw;
+      overflow-x: hidden;
+    }
+  }
+
 
